Mudança de modalidade - edição da tarefa agora é realizada por modal e as tarefas são salvas no localStorage

--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
     <input id="caixa-de-texto" class="caixa-de-texto" type="text" />
     <button id="adicionar-tarefa" class="btn-adicionar">Adicionar tarefa</button>
     <ul id="lista-tarefas" class="lista-tarefas"></ul>
+
+    <div id="modal-edicao" class="modal hidden">
+        <div class="modal-conteudo">
+            <h2>Editar Tarefa</h2>
+            <input type="text" id="input-modal" />
+            <div class="modal-botoes">
+            <button id="botao-salvar">Salvar</button>
+            <button id="botao-cancelar">Cancelar</button>
+            </div>
+        </div>
+    </div>
+
 </body>
 <script src="script.js"></script>
 </html>
